opam-version: "1.2"
maintainer: "thomas@gazagnaire.org"
authors: "Thomas Gazagnaire, Jon Ludlam"
homepage: "https://github.com/mirage/ocaml-rpc"
bug-reports: "https://github.com/mirage/ocaml-rpc/issues"
dev-repo: "git://github.com/mirage/ocaml-rpc"
tags: [
    "org:mirage"
    "org:xapi-project"
]
build-test: [
    ["jbuilder" "runtest" "-p" name]
]
depends: [
    "jbuilder" {build}
    "rpclib"
    "rpclib-async"
    "rpclib-lwt"
    "ppx_deriving_rpc"
    "async" {>= "v0.9.0" & <= "v0.11.0"}
    "lwt"
    "alcotest" {test}
    "alcotest-lwt" {test}
]
conflicts: [ "core" {< "v0.9.0"} ]
available: [ ocaml-version >= "4.04.0" ]
