opam-version: "2.0"
maintainer: "xen-api@lists.xen.org"
authors: "John Else"
homepage: "https://github.com/xapi-project/rrd-transport"
dev-repo: "git+https://github.com/xapi-project/rrd-transport.git"
bug-reports: "https://github.com/xapi-project/rrd-transport"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
  ["jbuilder" "runtest" "-p" name] {with-test}
]
depends: [
  "ocaml"
  "jbuilder" {build & >= "1.0+beta10"}
  "cstruct"
  "crc"
  "astring"
  "xapi-idl" {>= "1.0.0"}
  "xapi-rrd" {>= "1.0.0"}
  "xen-gnt" {>= "3.0.0"}
  "xen-gnt-unix" {>= "3.0.0"}
  "ounit" {with-test}
]
synopsis: "Shared-memory protocols for exposing performance counters"
description: """
VMs running on a Xen host can use this library to expose performance
counters which can be sampled by the xapi performance monitoring daemon."""
url {
  src: "https://github.com/xapi-project/rrd-transport/archive/master.tar.gz"
}
