opam-version: "2.0"
maintainer: "xen-api@lists.xen.org"
authors: ["Dave Scott" "Jon Ludlam" "John Else"]
homepage: "https://github.com/xapi-project/xcp-rrd"
bug-reports: "https://github.com/xapi-project/xcp-rrd/issues"
dev-repo: "git+https://github.com/xapi-project/xcp-rrd.git"
tags: [
  "org:xapi-project"
]
depends: ["ocaml" "xapi-rrd"]
synopsis: "RRD library for use with xapi"
description: """
This package has been renamed to 'xapi-rrd' and can safely be removed"""
