opam-version: "1.2"
name: "rrd2csv"
version: "1.0.0"
maintainer: "opam-devel@lists.ocaml.org"
authors: [ "Guillem Rieu" ]
license: "LGPL-2.1 with OCaml linking exception"
build: ["jbuilder" "build" "-p" name "-j" jobs]
build-test: ["jbuilder" "runtest" "-p" name]
depends: [
  "jbuilder" {build}
  "base-threads"
  "xapi-client"
  "xapi-idl"
  "xapi-rrd"
  "xapi-stdext-monadic"
  "xapi-stdext-pervasives"
  "xapi-stdext-std"
  "xapi-stdext-threads"
]
