
opam-version: "2.0"
name: "rrd2csv"
maintainer: "opam-devel@lists.ocaml.org"
authors: [ "Guillem Rieu" ]
license: "LGPL-2.1 with OCaml linking exception"
homepage: "https://github.com/xenserver/rrd2csv"
bug-reports: "https://github.com/xenserver/rrd2csv/issues"
dev-repo: "git+https://github.com/xenserver/rrd2csv.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "ocaml"
  "dune" {build}
  "base-threads"
  "xapi-client"
  "xapi-idl"
  "xapi-rrd"
  "xapi-stdext-monadic"
  "xapi-stdext-pervasives"
  "xapi-stdext-std"
  "xapi-stdext-threads"
]
synopsis: "Convert XenServer RRD data into CSV format"
url {
  src: "https://github.com/xenserver/rrd2csv/archive/master/master.tar.gz"
}
