opam-version: "2.0"
name: "rrdd-plugins"
maintainer: "xs-devel@lists.xenserver.org"
authors: [ "xs-devel@lists.xenserver.org" ]
license: "LGPL-2.1 with OCaml linking exception"
homepage: "https://github.com/xenserver/rrdd-plugins"
bug-reports: "https://github.com/xenserver/rrdd-plugins/issues"
dev-repo: "git://github.com/xenserver/rrdd-plugins"
build: [[ "dune" "build" "-p" name "-j" jobs ]]
synopsis: "Plugins registering to the RRD daemon and exposing various metrics"
depends: [
  "ocaml"
  "dune" {build}
  "base-threads"
  "base-unix"
  "cstruct-unix"
  "ezxenstore"
  "inotify"
  "rrdd-plugin"
  "uuid"
  "xapi-libs-transitional"
  "xapi-stdext-std"
  "xapi-stdext-unix"
  "xenctrl"
  "xenops"
  "xenstore"
]
