opam-version: "2.0"
synopsis: "Tool to dump RRD contents to XML format"
description: "Tool to dump RRD contents to XML format"
maintainer: "xen-api@lists.xen.org"
authors: "John Else"
tags: "org:xapi-project"
homepage: "https://github.com/xapi-project/xcp-rrdd"
bug-reports: "https://github.com/xapi-project/xcp-rrdd/issues"
depends: ["xapi-rrd" "xmlm"]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/xapi-project/xcp-rrdd.git"
