opam-version: "2.0"
maintainer: "xen-api@lists.xen.org"
authors: "xen-api@lists.xen.org"
homepage: "https://xapi-project.github.io/"
bug-reports: "https://github.com/xapi-project/xen-api-libs-transitional.git"
dev-repo: "git+https://github.com/xapi-project/xen-api-libs-transitional.git"
build: [[ "jbuilder" "build" "-p" name "-j" jobs ]]

available: [ os = "linux" ]
depends: [
  "ocaml"
  "jbuilder" {build}
  "astring"
  "xapi-stdext-threads"
]
synopsis: "Further transitional libraries required by xapi"
description: """
These libraries are provided for backwards compatibility only.
No new code should use these libraries."""
url {
  src:
    "https://github.com/xapi-project/xen-api-libs-transitional/archive/master.tar.gz"
}
