opam-version: "2.0"
maintainer: "jonathan.ludlam@citrix.com"
authors: "xen-api@list.xen.org"
bug-reports: "https://github.com/xapi-project/stdext/issues"
dev-repo: "git://github.com/xapi-project/stdext.git"
homepage: "https://xapi-project.github.io/"
tags: [ "org:xapi-project" ]

build:  [[ "dune" "build" "-p" name "-j" jobs ]]

depends: [
  "ocaml"
  "dune" {build}
  "xapi-stdext-base64"
  "xapi-stdext-date"
  "xapi-stdext-deprecated"
  "xapi-stdext-encodings"
  "xapi-stdext-monadic"
  "xapi-stdext-pervasives"
  "xapi-stdext-range"
  "xapi-stdext-std"
  "xapi-stdext-threads"
  "xapi-stdext-unix"
  "xapi-stdext-zerocheck"
]
synopsis: "A deprecated collection of utility functions"
description: """
Backward compatibility wrapper, this is introduced along with
xapi-stdext-3.0.0 and will be removed once the oasis files of the
necessary packages have been updated.

This library is provided for a transitionary period only.
No new code should use this library."""
