opam-version: "1.2"
maintainer: "xen-api@lists.xen.org"
authors: "xen-api@lists.xen.org"
homepage: "https://xapi-project.github.io/"
bug-reports: "https://github.com/xapi-project/xen-api-libs-transitional.git"
dev-repo: "https://github.com/xapi-project/xen-api-libs-transitional.git"

build: [[ "jbuilder" "build" "-p" name "-j" jobs ]]

available: [ os = "linux" ]
depends: [
  "jbuilder" {build}
  "forkexec"
  "xapi-stdext-monadic"
  "xapi-stdext-pervasives"
  "xapi-stdext-threads"
  "xapi-stdext-unix"
]
