opam-version: "2.0"
maintainer: "xen-api@lists.xen.org"
authors: [ "xen-api@lists.xen.org" ]
homepage: "https://github.com/xapi-project/varstored-guard"
dev-repo: "git+https://github.com/xapi-project/varstored-guard.git"
bug-reports: "https://github.com/xapi-project/varstored-guard"
depends: [
  "cmdliner"
  "cohttp-lwt"
  "message-switch-lwt"
  "rpclib-lwt"
  "xapi-idl"
  "xen-api-client-lwt"
]
synopsis: "varstored-guard"
description: ""
url {
  src: "https://github.com/xapi-project/varstored-guard/archive/master.tar.gz"
}
